# CppBasics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  course-info.yaml  course-remote-info.yaml
MemoryManagement/: section-info.yaml  section-remote-info.yaml
MemoryManagement/ConstAndReferences/: lesson-info.yaml  lesson-remote-info.yaml
MemoryManagement/ConstAndReferences/Const/: CMakeLists.txt  task-remote-info.yaml  task.md
MemoryManagement/ConstAndReferences/ConstQuestion/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md
MemoryManagement/ConstAndReferences/PassingArguments/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md
MemoryManagement/ConstAndReferences/References/: CMakeLists.txt  (+2 more)
MemoryManagement/LinkedList/: lesson-info.yaml  lesson-remote-info.yaml
MemoryManagement/LinkedList/LinkedList/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md
MemoryManagement/LinkedList/LinkedList/src/: approaching.cpp  collision.cpp  dllist.cpp  generate.cpp  loop.cpp  main.cpp
MemoryManagement/LinkedList/LinkedList/test/: test.cpp
MemoryManagement/MemoryLayout/: lesson-info.yaml  lesson-remote-info.yaml
MemoryManagement/MemoryLayout/CopyArray/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md
MemoryManagement/MemoryLayout/CopyArray/src/: task.cpp
MemoryManagement/MemoryLayout/CopyArray/test/: test.cpp
MemoryManagement/MemoryLayout/MemoryRegions/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md
MemoryManagement/MemoryLayout/SizeOfPointer/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md
MemoryManagement/MemoryLayout/SizeOfPointer/src/: main.cpp
MemoryManagement/MemoryLayout/SizeOfPointer/test/: output.cpp
MemoryManagement/TypeCastsAndCStrings/: lesson-info.yaml  lesson-remote-info.yaml
MemoryManagement/TypeCastsAndCStrings/CStringSplit/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md
MemoryManagement/TypeCastsAndCStrings/CStringSplit/src/: task.cpp
MemoryManagement/TypeCastsAndCStrings/CStringSplit/test/: test.cpp
ObjectOrientedProgramming/: section-info.yaml  section-remote-info.yaml
ObjectOrientedProgramming/ClassesAndObjects/: lesson-info.yaml  lesson-remote-info.yaml
ObjectOrientedProgramming/ClassesAndObjects/IntroducingObjects/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md  task0.md  task1.md  task2.md  task3.md  task4.md  task5.md  task6.md  task7.md  task8.md
ObjectOrientedProgramming/ClassesAndObjects/IntroducingObjects/src/: cgobject.cpp  collision.cpp  consumable.cpp  dynscene.cpp  enemy.cpp  engine.cpp  gobject.cpp  gobjectlist.cpp  main.cpp  operators.cpp  player.cpp  rectangle.cpp  scene.cpp  scenes.cpp  simplscene.cpp  statscene.cpp  textures.cpp  utils.cpp
ObjectOrientedProgramming/ClassesAndObjects/IntroducingObjects/test/: test.cpp
ObjectOrientedProgramming/ClassesAndObjects/Introduction/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md  task2.md  task3.md  task4.md  task5.md  task6.md  task7.md  task8.md
ObjectOrientedProgramming/ClassesAndObjects/Introduction/src/: cgobject.cpp  consumable.cpp  dynscene.cpp  enemy.cpp  engine.cpp  gobjectlist.cpp  operators.cpp  player.cpp  scene.cpp  statscene.cpp  utils.cpp
ObjectOrientedProgramming/ClassesAndObjects/Polymorphism/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md
ObjectOrientedProgramming/ClassesAndObjects/Polymorphism/src/: engine.cpp  leaderboard.cpp  player.cpp  scene.cpp  statscene.cpp  textures.cpp
ObjectOrientedProgramming/ClassesAndObjects/Polymorphism/test/: test.cpp
ObjectOrientedProgramming/Memory Ownership/: lesson-info.yaml
ObjectOrientedProgramming/MemoryOwnership/: lesson-info.yaml  lesson-remote-info.yaml
ObjectOrientedProgramming/MemoryOwnership/Ownership/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md
StandardLibraryEssentials/: section-info.yaml  section-remote-info.yaml
StandardLibraryEssentials/StandardTemplateLibrary/: lesson-info.yaml  lesson-remote-info.yaml
StandardLibraryEssentials/StepForwardWithSTL/: lesson-info.yaml  lesson-remote-info.yaml
StandardLibraryEssentials/Templates/: lesson-info.yaml  lesson-remote-info.yaml
WarmUp/: section-info.yaml  section-remote-info.yaml
WarmUp/HelloWorld/: lesson-info.yaml  lesson-remote-info.yaml
WarmUp/MovingOn/: lesson-info.yaml  lesson-remote-info.yaml
WarmUp/MovingOn/GivingDirection/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md
WarmUp/MovingOn/GivingDirection/src/: main.cpp
WarmUp/MovingOn/GivingDirection/test/: test.cpp
WarmUp/MovingOn/HuntingBugs/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md
WarmUp/MovingOn/HuntingBugs/src/: approaching.cpp  main.cpp
WarmUp/MovingOn/HuntingBugs/test/: test.cpp
WarmUp/MovingOn/LookAround/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md
WarmUp/MovingOn/LookAround/src/: main.cpp
WarmUp/MovingOn/MoveAnObject/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md
WarmUp/MovingOn/MoveAnObject/src/: main.cpp  move.cpp
WarmUp/MovingOn/MoveAnObject/test/: test.cpp
WarmUp/MovingOn/RunningInALoop/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md
WarmUp/MovingOn/RunningInALoop/src/: collision.cpp  main.cpp  point.cpp
WarmUp/MovingOn/RunningInALoop/test/: test.cpp
WarmUp/Quiz/: lesson-info.yaml  lesson-remote-info.yaml
WarmUp/helloworld/: lesson-info.yaml
cmake/: googletest-download.cmake  googletest.cmake  sfml-download.cmake  sfml.cmake  utils.cmake
include/: cgobject.hpp  circle.hpp  collision.hpp  constants.hpp  consumable.hpp  direction.hpp  dllist.hpp  dynscene.hpp  enemy.hpp  engine.hpp  enums.hpp  game.hpp  gevent.hpp  gobject.hpp  gobjectlist.hpp  leaderboard.hpp  leaderboardscene.hpp  operators.hpp  player.hpp  point.hpp  rectangle.hpp  scene.hpp  scenes.hpp  simplscene.hpp  statscene.hpp  testing.hpp  testscene.hpp  textures.hpp  utils.hpp
resources/: leaderboard.csv  test.csv
test-framework/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
(+653 files in other folders)
